infra/division.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: division-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: division
  template:
    metadata:
      labels:
        app: division
    spec:
      containers:
        - name: division
          image: skn1942/math-o-division:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5003


---
apiVersion: v1
kind: Service
metadata:
  name: division-srv
spec:
  selector:
    app: division
  ports:
    - name: division
      protocol: TCP
      port: 5003
      targetPort: 5003
