infra/orchestrator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestrator-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orchestrator
  template:
    metadata:
      labels:
        app: orchestrator
    spec:
      containers:
        - name: orchestrator
          image: skn1942/math-o-orchestrator:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5006


---
apiVersion: v1
kind: Service
metadata:
  name: orchestrator-srv
spec:
  selector:
    app: orchestrator
  ports:
    - name: orchestrator
      protocol: TCP
      port: 5006
      targetPort: 5006
