infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - host: skn-math-o.dev
      http:
        paths:
          - path: /api/sum?(.*)
            pathType: Prefix
            backend:
              service:
                name: sum-srv
                port:
                  number: 5000

          - path: /api/subtract?(.*)
            pathType: Prefix
            backend:
              service:
                name: subtract-srv
                port:
                  number: 5001

          - path: /api/multiply?(.*)
            pathType: Prefix
            backend:
              service:
                name: multiply-srv
                port:
                  number: 5002

          - path: /api/division?(.*)
            pathType: Prefix
            backend:
              service:
                name: division-srv
                port:
                  number: 5003

          - path: /api/power?(.*)
            pathType: Prefix
            backend:
              service:
                name: power-srv
                port:
                  number: 5004

          - path: /api/sqrt?(.*)
            pathType: Prefix
            backend:
              service:
                name: sqrt-srv
                port:
                  number: 5005

          - path: /api/orchestration?(.*)
            pathType: Prefix
            backend:
              service:
                name: orchestration-srv
                port:
                  number: 5006

          - path: /api/prometheus?(.*)
            pathType: Prefix
            backend:
              service:
                name: prometheus-srv
                port:
                  number: 9090

          - path: /api/grafana?(.*)
            pathType: Prefix
            backend:
              service:
                name: grafana-srv
                port:
                  number: 3000
  tls:
    - hosts:
        - skn-math-o.dev
